--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -8,7 +8,7 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: .\.
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 3.1.x
-  WORKING_DIRECTORY: 
+  WORKING_DIRECTORY: FunctionApp1
   DOTNET_CORE_VERSION_INPROC: ''
 jobs:
   build-and-deploy:
