--- a/.github/workflows/codeql-analysis-2.yml
+++ b/.github/workflows/codeql-analysis-2.yml
@@ -18,8 +18,8 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
   schedule:
-    #- cron: '16 9 * * 4'
-    - cron: '*/15 * * * *'
+    - cron: '16 9 * * 4'
+    #- cron: '*/15 * * * *'
 
 jobs:
   analyze:
